--- a/docs/rails-dependent.mdx
+++ b/docs/rails-dependent.mdx
@@ -2,7 +2,7 @@
 title: "【Rails】ActiveRecordの:dependent使い分けまとめ【:destroy, :delete, :nullify】"
 description: 身体を動かすために使われるエネルギーをATPと言います。この記事では、現代人が失いがちなATPの補充方法について説明します。
 created: 1534464000000
-tags: [Rails, Ruby, ActiveRecord]
+tags: [バックエンド, Rails, Ruby, ActiveRecord]
 thumbnail: https://storage.googleapis.com/stacky-health/2018/08/RubyOnRailsDependent.jpg
 ---
 
