--- a/docs/information-gathering.mdx
+++ b/docs/information-gathering.mdx
@@ -1,8 +1,8 @@
 ---
-title: 仕事における情報収集の方法とは？インターネットを漁るだけでは出世できない理由
+title: 仕事における情報収集の方法とは？「僕らが毎日やっている最強の読み方」感想
 description: 競争が社員のモチベーションに悪影響を与えていることがあります。競争とモチベーションの関係性と、そこから見る最適な競争の作り方について記載していきます。
 created: 1483714800000
-tags: [モチベーション, マネジメント, 承認, 権限移譲]
+tags: [モチベーション, マネジメント, 承認, 権限移譲, 感想]
 thumbnail: https://storage.googleapis.com/stacky-health/2018/09/9bf6138549f3f767d1ecb3ca68cd111f.jpg
 ---
 
@@ -10,9 +10,13 @@ thumbnail: https://storage.googleapis.com/stacky-health/2018/09/9bf6138549f3f767
 
 正社員として働いている中で見えてくるものもあれば、またマネージャーの立場になることで初めて見えてくるものもあれば、そこから距離を置くことでやっと見えてくるものもあります。
 
-逆に言えば新卒時代は目の前の仕事にいっぱいいっぱいで、なかなか物事の本質が見えてこないものではないでしょうか。
+逆に言えば新卒時代は目の前の仕事にいっぱいいっぱいで、なかなか物事の本質が見えてきませんでした。
 
-今回は仕事における情報収集のやり方について、正社員から距離をおいた今だからこそできる俯瞰的な立場で見つめ直していきたいと思います。
+今はフリーランスとしてある意味仕事を俯瞰して見れるようになった中で、『僕らが毎日やっている最強の読み方』を読んで感じたことがありました。
+
+読書感想文として、記事にまとめたいと思います。
+
+<Amazon productKey="僕らが毎日やっている最強の読み方" />
 
 # 仕事の役割における勉強方法
 ## ただ目の前の仕事に必要な勉強を詰め込む新卒時代
@@ -75,12 +79,13 @@ thumbnail: https://storage.googleapis.com/stacky-health/2018/09/9bf6138549f3f767
 
 # まとめ
 仕事のレイヤーが上がっていくと、ある点からブレイクスルーが必要になってきます。それは仕事を与えられる側の人間から与える側の人間になるからです。
+
 与える以上、自ら仕事を選び作り出す知識が必要になってきます。つまり_目の前にある世界を掘っていくだけでは突破することはできず、見えている世界がいかに広いかが重要になってきます_。
 
 思想家の東浩紀は、情報が意図せぬものに届いてしまうことを誤配と呼びそれを重要視しています。ブレイクスルーを突破するためにも、よりアトランダムな情報収集が必要になってくるでしょう。
 
-そしてそのための情報収集の方法について、インターネットではなく本や雑誌といった媒体での情報収集をオススメしていきたいと思います。
+そしてそのための情報収集の方法について、インターネットではなく本や雑誌といった媒体での情報収集の重要性に気づかされる結果となりました。
 
-具体的な使い分けや情報収集の方法については以下の本が参考になったため、紹介したいと思います。
+具体的な使い分けや情報収集の方法については原本についてご参照ください。
 
 <Amazon productKey="僕らが毎日やっている最強の読み方" />
