feat: add articles

--- a/docs/remote-work.mdx
+++ b/docs/remote-work.mdx
@@ -1,8 +1,8 @@
 ---
 title: "リモートワークはつらいので辞めました！【半年やった感想】"
 description: リモートワークを半年間やってきて、なにが辛かったか、私が抱いた印象を振り返っていきます。
-created: 1559919600000
-tags: [リモーtーワーク]
+created: 1546095600000
+tags: [リモートワーク, モチベーション]
 thumbnail: https://storage.googleapis.com/stacky-health/2019/01/ab09d74b05db94c9df011e75a5457c45.png
 ---
 
@@ -126,6 +126,8 @@ thumbnail: https://storage.googleapis.com/stacky-health/2019/01/ab09d74b05db94c9
 そのため、それを避けられる自信がない限りリモートワークを長く続けるのはお勧めしません。
 
 私はその自信がなかったため、少なくともフィードバックがもらえない環境に長く身を置くべきではないと判断しました。
+
+<LinkCard slug="flow" />
 
 ## 気持ちが入っていきづらい
 
