feat: add article

--- a/docs/manager.mdx
+++ b/docs/manager.mdx
@@ -3,7 +3,7 @@ title: マネージャーは結局、なにをする人なのか
 description: マネージャーって結局、なにをする人なのでしょうか。その曖昧性からマネージャー不要論なども出ている現在ですので、改めてその役割について考えていきたいと思います。
 created: 1562668380000
 tags: [マネジメント, 心理的安全性, 組織]
-thumbnail: /thumbnails/manager.png
+thumbnail: https://untraten.sirv.com/thumbnails/manager.png
 ---
 
 マネージャーって結局、なにをする人なのでしょうか。
