feat: add article

--- a/docs/javascript-history.mdx
+++ b/docs/javascript-history.mdx
@@ -8,51 +8,49 @@ thumbnail: https://storage.googleapis.com/stacky-health/2019/12/72a00cd568035ab1
 
 # 1990年代前半
 ## Webブラウザの誕生
-WorldWideWebという最初のWebブラウザが誕生します。
+1990年代前半にWebブラウザが誕生するところから、Web技術は始まります。
 
-1993年にはMosaicという画像の表示に対応したブラウザが誕生し、Webの利用者が大きく増えました。
-
-その翌年1994年に出たNetscape Navigatorが広く普及し、当時の世界中のもっとも主流なWebブラウザとなりました。
-
-1995年にはWindows95が発表され、同時にInternet Explorer 1.0もリリースされました。
+- 1990年: 最初のWebブラウザの[WorldWideWeb](https://ja.wikipedia.org/wiki/WorldWideWeb)
+- 1993年: 画像の表示に対応した[NCMA Mosaic](https://ja.wikipedia.org/wiki/NCSA_Mosaic)
+- 1994年: 当時の世界中のもっとも主流なWebブラウザとなった[Netscape Navigator](https://ja.wikipedia.org/wiki/Netscape_Navigator_(%E3%83%8D%E3%83%83%E3%83%88%E3%82%B9%E3%82%B1%E3%83%BC%E3%83%97%E3%82%B3%E3%83%9F%E3%83%A5%E3%83%8B%E3%82%B1%E3%83%BC%E3%82%B7%E3%83%A7%E3%83%B3%E3%82%BA))
+- 1995年: Windows95と同時にリリースされた[Internet Explorer 1.0](https://ja.wikipedia.org/wiki/Internet_Explorer)
 
 # 1993年
 ## CGIの誕生
 それまでのWebサーバはクライアントの要求に対し、HTMLファイルを返すだけでした。
 
-しかしCGI技術により、プログラムの実行結果に基づいて動的にHTMLを生成・送出できるようになりました。
+1993年にはCGI技術が誕生し、_プログラムの実行結果に基づいて動的にHTMLを生成・送出できるようになりました_。
 
-これにより、掲示板やチャット、アクセスカウンターのような動的なコンテンツが作られるようになりました。
+これにより、掲示板やチャット、アクセスカウンターのような動的なコンテンツが作られるようになります。
 
 # 1995年
 ## JavaScriptの誕生
-1995に、WebブラウザーであるNetscape Navigatorに搭載されるスクリプト言語としてJavaScriptが誕生しました。
+1995に、WebブラウザーであるNetscape Navigatorに搭載されるスクリプト言語として_JavaScriptが誕生しました_。
 
-ただ最初はJavaScriptではなく、LiveScriptという名前でした。
-
-しかし同じ年に発表されたJavaが人気を博したことから、それに便乗してJavaScriptという名前に改名しました。
+ちなみに最初はJavaScriptではなく、LiveScriptという名前でした。
+しかし同じ年に発表されたJavaが人気を博したことから、それに便乗してJavaScriptという名前に改名したそうです。
 
 # 1996年
 ## JScriptの誕生
 当時、WebブラウザはNetscapeとInternet Explorerの２強でした。
+これらのブラウザでは使用できる言語が異なるため、２つのブラウザで動かすためには２つの言語に対応する必要がありました。
 
-NetscapeがJavaScriptとJava appletを搭載したのに対し、Internet ExplorerはJScriptという言語を搭載しました。
-
-そのため２つのブラウザで動かすためには「JScript」と「JavaScript」の２つの言語に対応する必要がありました。
+| | |
+|-|-|
+|Netscape|JavaScriptとJava applet|
+|Internet Explorer|JScript|
 
 # 1997年- JavaScript標準化団体の結成
 ２つの言語に対応しなければならない状態は、健全ではありません。
+そのため_Ecma Internationalという標準化団体が組織され、JavaScriptの標準化に向けて動き出しました_。
 
-そのためEcma Internationalという標準化団体が組織され、JavaScriptの標準化に向けて動き出しました。
-
-そして1997年6月にECMAScriptの初版が誕生します。
-
+## ECMAScriptの誕生
+1997年6月にECMAScriptの初版が誕生します。
 その後は1998年にECMAScript 2版が、1999年にECMAScript 3版が公開されます。
 
 # 1997年
 ## PHPの誕生
 Perl言語をCGIとして利用するために、PHPが開発されました。
-
 2000年に登場したPHP4.0から、爆発的に普及します。
 
 # 2000年代前半
@@ -116,9 +114,11 @@ Internet Explorerの一強が崩れることで標準化の機運が強まり、
 2009年に5版が公開され、2011年には5.1版されました。
 
 ## Node.jsの誕生
-V8はオープンソースで公開されていたので、それを利用したJavaScriptの実行環境であるNode.jsが誕生しました。
+Google Chromeに搭載されていたV8エンジンはオープンソースで公開されていたので、それを利用したJavaScriptの実行環境であるNode.jsが誕生しました。
 
 Node.jsによりサーバサイドもJavaScriptで書くことができるようになりました。
+
+<ArticleCard slug="node-js" />
 
 # 2010年
 ## HTML5の普及
