feat: add article

--- a/docs/remote-work.mdx
+++ b/docs/remote-work.mdx
@@ -7,11 +7,9 @@ thumbnail: https://storage.googleapis.com/stacky-health/2019/01/ab09d74b05db94c9
 ---
 
 フリーランスエンジニアを初めて半年、眼精疲労から始めたリモートワーク生活を辞め、定時出社生活に戻りました！
-
 もともと会社員時代から会社に通う生活に不満はなかったのもありますが、_リモートワーク生活より充実した日々を過ごせています_。
 
 リモートワークというと例外なく羨ましいと言われてきたんですが、正直なところ「リモートワークでの仕事」自体に魅力を感じることは全くありませんでした。
-
 実際に周りのフリーランサーも、リモートワークを辞め正社員に戻った人が何人もいました。
 
 「リモートワークで人生ハッピー！」みたいに言われることも多い世の中ですが、なにが辛かったか、私が抱いた印象を振り返っていきたいと思います！
@@ -41,7 +39,6 @@ thumbnail: https://storage.googleapis.com/stacky-health/2019/01/ab09d74b05db94c9
 <Balloon img="man2">そうしてください。</Balloon>
 
 コミュニケーションの相性次第だとは思うんですが、_噛み合わないとコミュニケーションコストがものすごくかかります_。
-
 ただでさえ文字でのコミュニケーションに時間がかかる中で、意思疎通が取れないと心が折れそうになります。
 
 なのでリモートワークしているときも、複雑な仕様相談する際は対面で直接確認するようにしていました。
@@ -49,35 +46,12 @@ thumbnail: https://storage.googleapis.com/stacky-health/2019/01/ab09d74b05db94c9
 ## 返事がすぐにもらえない
 
 返答が来るまで作業ができないような状況よくあると思います。
-
-リモートワークはすぐに返答がもらえる保証はなく、いつ返答が来るかもわからないため、仕事に入れないことが多々あります。
-
-返事が数時間後というのはザラですし、返事が来るまで何日もかかることもあります。
+ですがリモートワークはすぐに返答がもらえる保証はなく、またいつ返答が来るかもわかりません。
+返事が数時間後というのはザラですし、返事が来るまで何日もかかることもあります。追撃しないと返事がもらえないこともあります。
 
 つまり、_いつ来るかわからない返事を永遠に待ち続けないといけない_のです。
 
-そういった状況でモチベーションを保ち続けるのは、私はつらいと感じてしまいました。
-
-## 見えない相手には負の感情を抱きやすい
-今までの経験上、_どうしても物理的に見えない相手というのは負の感情を抱きやすい_ものです。
-
-たとえば正社員時代もベトナムオフショアを利用していたのですが、ベトナム側は日本に対して不満を抱き、日本側はベトナムに対して不満を抱いていました。
-
-純粋に気持ちが入ってきませんし、見えない相手を「サボってるんじゃないか」と疑っている人たちをなんども見たことがあります。
-
-それを乗り越えるためには、素早い返答や明確なアウトプットなど、それを補うなにかがお互いに必要になります。
-
-## 温度感がわからない
-
-今の状況はどんな感じか、対面であればその場の空気や雑談ベースですぐに伝わります。
-
-しかしリモートワークは基本的に仕事を進める上で必要な、無機質な情報しか入ってきません。
-
-そのため、全く他の人の状況がわからないのです。
-
-たとえば「開発スケジュールが遅れていて切迫している」「エラーが出て障害対応に追われていた」みたいな状況で、「空気読めてない」みたいなことになり得ます。
-
-## 対面よりコミュニケーションコストがかかる
+### 対面よりコミュニケーションコストがかかる
 
 実際の仕事場をイメージしてもらうと分かると思うんですが、色々な人に質問したり相談したりすることはあると思います。
 
@@ -94,58 +68,71 @@ thumbnail: https://storage.googleapis.com/stacky-health/2019/01/ab09d74b05db94c9
 こんなやりとりも、チャットになるとAさんに質問して回答がひたすらこない状況に変換されます。
 
 リモートワークは「人と会わないからストレスから解放される」みたいな言われ方がされますが、チャット等でのコミュニケーションは発生します。
-
 しかもそれは_対面のコミュニケーションよりレベルが高い_ものです。
 
 そこを乗り越えられる覚悟がない限り、「対面で働くストレス」より大きくなってしまうことも想定したほうが良いと思います。
 
+## 温度感がわからない
+
+今の状況はどんな感じか、対面であればその場の空気や雑談ベースですぐに伝わります。
+なので「忙しそうだから後にしようかな？」とか、「大変そうだから手伝ってあげよう」とか、なんとなく空気に合わせて行動を変えますよね。
+
+しかしリモートワークは基本的に仕事を進める上で必要な、無機質な情報しか入ってきません。
+そのため、他の人の状況が全くわからないのです。
+
+たとえば「開発スケジュールが遅れていて切迫している」「エラーが出て障害対応に追われていた」みたいな状況で、「空気読めてない」みたいなことになり得るということです。
+
+## 見えない相手には負の感情を抱きやすい
+今までの経験上、_どうしても物理的に見えない相手というのは負の感情を抱きやすい_ものです。
+
+たとえば正社員時代もベトナムオフショアを利用していたのですが、ベトナム側は日本に対して不満を抱き、日本側はベトナムに対して不満を抱いていました。
+純粋に気持ちが入ってきませんし、見えない相手を「サボってるんじゃないか」と疑っている人たちをなんども見たことがあります。
+
+それを乗り越えるためには、_素早い返答や明確なアウトプットなど、それを補うなにかがお互いに必要_になります。
+
 ## 人に会わない
 基本的にカフェなどで仕事をしている間、誰にも会うことはありません。
 
-最近は「リモートワークで鬱になる」みたいな記事も上がっていて、これは多くの人がリモートワークで感じるストレスなようです。
-
+最近はリモートワークで鬱になるみたいな記事も上がっていて、これは多くの人がリモートワークで感じるストレスなようです。
 実際に「リモートワークずっとやってたら会話できなくなった」なんて人も周りにいます。
 
-リモートワークに憧れる人は、本当に人に会わないでもやっていけるのか、そうでなければなんのコミュニティでそれを補うか考えたほうが良いでしょう。
+リモートワークに憧れる人は、_本当に人に会わないでもやっていけるのか、そうでなければなんのコミュニティでそれを補うか考えたほうが良い_でしょう。
 
 ## フィードバックがない
 正社員だと1 on 1やMBOなどのフィードバックの機会があり、そこで何かしらのダメ出しをされ足りてない部分を認識することができます。
-
 そういった場がなくとも、対面ならまだ相手の反応や雑談ベースで反応が返ってきますが、リモートワークだとそういった情報が全く入ってきません。
 
-そのため自分の状況を客観的に判断し、自己改善を続けていく必要があります。
+そのため_常に自分の状況を客観的に判断し、自己改善を続けていく必要があります_。
 
 ### フィードバックとモチベーション
 
 会社員時代に「1on1でフィードバックをするようにしたらメンバーのモチベーションが上がった」という事例がありました。
-
-フィードバックはモチベーションにも影響してきます。
-
-ですので_リモートワークを続けると「腐ってしまう」「自己評価と外部の評価が乖離てしまう」みたいなことが起こりえます_。
-
-そのため、それを避けられる自信がない限りリモートワークを長く続けるのはお勧めしません。
-
-私はその自信がなかったため、少なくともフィードバックがもらえない環境に長く身を置くべきではないと判断しました。
+またフロー状態に入るためには、フィードバックが必要だと言われています。
 
 <LinkCard slug="flow" />
+
+つまり_フィードバックはモチベーションやパフォーマンスにも影響してきます_。
+
+ですのでリモートワークを続けると「腐ってしまう」「自己評価と外部の評価が乖離てしまう」みたいなことが起こりえます。
+
+もちろん強い自制心で反省を繰り返し、高い集中力と向上心を維持し続けられる人もいるかもしれません。
+しかしそうでなければ、モートワークを長く続けるのはお勧めしません。
+
+私はその自信がなかったため、少なくともフィードバックがもらえない環境に長く身を置くべきではないと判断しました。
 
 ## 気持ちが入っていきづらい
 
 やはりどうしてもリモートワークだと自分の気持ちが入ってきづらいため、金稼ぎの手段のようになってしまいます。
-
 正社員時代は休日も仕事したいぐらい仕事を楽しんでいたこともあったため、そこから比べると充実感は本当に薄かったです。
 
 結局のところなにに対してモチベーションを感じるのかなので、リモートワークでも自分のモチベーションを満たせる人であれば問題ないと思います。
-
 ただ少なくとも私はリモートワークに魅力を感じることができませんでした。
 
 # おわりに
 結局のところ色々な会社を経験して思うことは、環境・働く人次第だということです。
 
 居るだけでストレスになるような環境よりは確かにリモートワークのほうが優れているかもしれません。
-
 しかし、そこに居たいと思えるような環境に行って働くのがベストだというのが私の結論です。
 
 結局のところ_「自分にあった環境を探す」というのが一番大事なことで、リモートワークはその選択肢の1つ_でしかありません。
-
 「旅しながら働きたい」「子供と一緒にいる時間を増やしたい」みたいなポジティブな理由ならまだしも、「会社に通いたくない」みたいな理由からリモートワークするのはあまりお勧めできないかなーと思います！
