feat: add article

--- a/docs/freelance.mdx
+++ b/docs/freelance.mdx
@@ -2,7 +2,7 @@
 title: 「この会社大丈夫かな」「フリーランス不安」フリーランスと正社員どっちが正解なの？
 description: フリーランスと正社員どちらがいいかについて、どちらも経験した立場からフラットに検討します。
 created: 1532358000000
-tags: [エンジニア, キャリア, フリーランス, 正社員]
+tags: [エンジニア, キャリアパス, フリーランス, 正社員]
 thumbnail: https://storage.googleapis.com/stacky-health/2018/08/ceae12dd573358e3b36e1f62f386bc4b.jpg
 ---
 
