feat: add article

--- a/docs/40-years-old.mdx
+++ b/docs/40-years-old.mdx
@@ -1,5 +1,5 @@
 ---
-title: 40代、居場所なし問題を考える
+title: 40代エンジニア、居場所なし問題を考える
 description: 最近40代で居場所を失ったエンジニアの記事を何度か目にしたので、思ったことをつらつらと書いていく。
 created: 1569974400000
 tags: [エンジニア, キャリアパス]
@@ -13,7 +13,7 @@ thumbnail: https://untraten.sirv.com/thumbnails/40-years-old.png
 
 # 私の経験談
 
-実のところ、私も似たような経験をしたことがある。
+実のところ、私もそうなりかねないと感じたことがある。
 新卒で所属したプロジェクトが当時リリースしてから数年経ったものだった。
 配属後は、そのプロジェクトの保守を何年もやることになった。
 
@@ -41,9 +41,9 @@ thumbnail: https://untraten.sirv.com/thumbnails/40-years-old.png
 ## 局所的なスキルアップ
 
 当然スキルアップもしない訳ではない。
-しかしずっと同じ環境にいると、それに特化したスキルばかり身につけてしまう。
+しかしずっと同じ環境にいるだけでは、その技術スタックに特化したスキルしか身につかない。
 機械学習でいう、過学習みたいな感じだ。
-そして、同じことをやっていると、すぐに停滞してしまう。
+そして同じことをやっていると、すぐに停滞してしまう。
 
 ## 「慣れ」で優秀と錯覚する
 
@@ -53,8 +53,8 @@ thumbnail: https://untraten.sirv.com/thumbnails/40-years-old.png
 これで自分は優秀だと錯覚してしまう下地はバッチリだ。
 
 特に、錯覚するためには読みづらいコードであればあるほど良い。
-ドキュメントもなく、読みづらく複雑なコードだと、より慣れが必要になる。
-「読まないでも覚えてる人」が勝つのは当然だ。
+ドキュメントもなく、読みづらく、複雑なコードだと、スキルより慣れが重要になる。
+「読まないでも覚えてる人」がより成果が出せるのは当然だ。
 
 良いコードほど読みやすく、新しい人が入ってもキャッチアップしやすい。
 しかし「慣れてる人」にとっては、キャッチアップしづらい方が、相対的に成果を出しやすいのだ。
@@ -65,10 +65,12 @@ thumbnail: https://untraten.sirv.com/thumbnails/40-years-old.png
 こういった膠着状態を打破するためには、外から最新技術を導入してくれる人が必要である。
 
 しかし残念ながらレガシーな環境に、最新技術をバリバリ使うような人は来づらい。
+そういう人は、転職の際にレガシーな環境を避けるからだ。
 
-そして来たとしても、中の人にとって今の環境は心地よいものだ。
+そして来たとしても、変化が起こるとは限らない。
+なぜなら中の人にとって今の環境は心地よいものだ。
 したがってそれを壊して導入しようというモチベーションも湧きづらい。
-「今は忙しい」「コストに見合わない」だのなんだの言って、導入を拒むことになる。
+「今は忙しい」「コストに見合わない」「他部署との調整が必要」「セキュリティリスク」だのなんだの言って、変化を拒むことになる。
 
 そうして勘違いしたまま、何年もの時が過ぎてしまうのだ。
 
@@ -80,11 +82,23 @@ thumbnail: https://untraten.sirv.com/thumbnails/40-years-old.png
 ## 外から情報を得る
 
 まず、「外から情報を得る」が、真っ先に頭に浮かぶ。
+
 ただ残念なことに、こういった状態に陥ってるとき、外から情報を得るモチベーションが湧きづらい。
 なぜなら世の中の情報が、自分と関係ない技術ばかりになるからだ。
+
 たとえばJavaScript+jqueryだけ使っている人が、「Reactの記事」や「TypeScript勉強会」があっても興味をわかないだろう。
-レガシーな技術を使っていると、自然と世の中のトレンドと乖離して、情報を追わなくなってしまう。
+レガシーな技術を使っていると、自然と世の中のトレンドと乖離して、外部情報に興味がなくなってしまう。
+
 したがって自分がもしそうなってるとしたら、だいぶ危ないかもしれない。
+
+### 仕事をしすぎない
+
+こうした外から情報を得ようとしない状況は、仕事を頑張りすぎてる時こそなりやすい。
+というのも毎日開発に追われ仕事と睡眠だけの生活だと、外部から情報を得るタイミングがないからだ。
+職場が全てとなってしまい、どんどん外部との乖離が進んでしまう。
+
+私自身、眼精疲労になるまで仕事に没頭した時期もあったが、その職場を離れた後の方が成長速度が上がった自覚がある。
+もちろん余った時間を自己投資に割かなければ意味はないが、仕事に追われている限りそもそもその選択肢を選ぶことができないだろう。
 
 ## 未知の環境に触れ続ける
 
@@ -93,6 +107,7 @@ thumbnail: https://untraten.sirv.com/thumbnails/40-years-old.png
 結局のところ、別の世界に触れないと見えないことがある。
 
 ### 大学時代の友人と話して感じたこと
+
 私はずっとWeb系の業界にいるため、社会人になってから出会う人の属性はなんだかんだ一致している。
 しかし大学時代の友人は、同じエンジニアだったとしても、インフラ系の大企業や、コンサルなど幅広い。
 そういった人とたまに話をして、全然世界観が違うことをヒシヒシと感じることがある。
@@ -113,7 +128,7 @@ AWSはわかる。
 ということで、記事から思ったことをつれづれとまとめてみた。
 どれも当たり前のことばかりだが、自分の中で改めて意識していきたい。
 
-# 追記：余談
+# 余談
 
 ちなみに、過去記事では、むしろ同じプロジェクトに残ることも推奨している。
 
