--- a/docs/empowerment.mdx
+++ b/docs/empowerment.mdx
@@ -94,31 +94,25 @@ thumbnail: https://storage.googleapis.com/stacky-health/2018/08/18e9ef6d6f05034f
 そのため_あなたががんばって１人でやればやろうとするほど、他の人はモチベーションを失っていく_のです。
 
 ### その人でないといけないと思えること
-承認とは自分の存在が認められた状態です。
 
+承認とは自分の存在が認められた状態です。
 それは反対に、「誰でも良い」と感じてしまうものからは承認感を得られないと言うことでもあります。
 
 そのために任せるといっても仕事を押し付けたり、やらせるのではありません。
-
 例えば「誰でもいいから議事録とっといて」と言われて議事録を取ったとしても、それで承認されているとは感じないのではないでしょうか。
-
-「佐藤さんの議事録は字が綺麗だし論理的にまとまっててみやすいから佐藤さんに議事録とってほしいな」の方が承認されているように感じませんか？
+「佐藤さんの議事録は字が綺麗だし論理的にまとまっててみやすいから、佐藤さんに議事録とってほしいな」の方が承認されているように感じませんか？
 
 つまりモチベーション高く仕事するためには、この仕事は自分だからこそやっていると思えることが大事なのです。
-
 仕事を押し付けたり、やらせることとは違うのです。
 
 # 仕事を任せられないのはなぜ？
 では部下に任せられないマネージャーはなぜ任せられないのでしょうか。
-
 それには言葉にならない裏の目的があるからです。
-
 任せられるようになるためには、まず_自分がその裏の目的によって行動が妨げられていることを認知_しましょう。
 
 これはメタ認知と言って、近年重要視されている考え方です。
 
 部下に仕事を任せたり、部下が仕事をうまくできたとき、どういう感情が芽生えますか？
-
 裏の目的については個人個人異なってきます。
 
 記事では様々な例をあげていくので、裏の目的を理解するための参考になれば幸いです。
@@ -134,15 +128,14 @@ thumbnail: https://storage.googleapis.com/stacky-health/2018/08/18e9ef6d6f05034f
 学生の頃「自分が辞めたらバイト先潰れる」なんて人いましたよね。
 
 ## 承認を失うことへの恐怖
+
 部下に任せるとは、つまり自分の仕事を部下に渡していくということです。したがって自分の仕事の量は任せれば任せるほど減っていきます。
 
-そして自分が仕事せずに組織がうまく回るのであれば、自分の存在承認が失われてしまいます。なぜなら仕事とは自分にとっての承認の1つだからです。
+そして自分が仕事せずに組織がうまく回るのであれば、自分の存在承認が失われてしまいます。
+なぜなら仕事とは自分にとっての承認の1つだからです。
 
 また自分より部下の方がうまくできてしまった場合、さらに自分の立場を脅かす存在になってしまうかもしれません。
-
-したがって仕事を任せるということは、自分の承認を失うことに繋がってきます。
-
-なぜなら自分がいなくても組織が回ることの証明になってしまい、自分が組織に貢献しているという感覚を失ってしまうからです。
+すると自分がいなくても組織が回ることの証明になってしまい、自分が組織に貢献しているという感覚を失ってしまいかねません。
 
 そのため_部下に任せないことで承認を失うことの恐怖から逃れようとしている_わけです。
 
@@ -155,11 +148,17 @@ thumbnail: https://storage.googleapis.com/stacky-health/2018/08/18e9ef6d6f05034f
 マネジメントにおいても同様です。
 
 誰もが最初はマネジメントができるからなったわけではなく、プレイヤーとして成果を出したからマネージャーになったのではないでしょうか。
-
 つまり自分自身がマネジメントできるかどうかは、やってみないとわからないわけです。
 
 仮に部下に任せて上手くいかない場合に、自分がマネジメント能力がなかったと判明してしまうかもしれません。
-
 したがってそれを避けるために、_「忙しい」や「頼りにならない」を言い訳に、部下に任せるという行為自体を棄権している_のです。
 
 忙しくて任せてないだけであって、自分にマネジメント能力がないと判明してしまう未来から逃げ続けているわけです。
+
+# おわりに
+この記事では、任せることとモチベーションの関係性と、あなたがなぜ任せられないのかについてまとめていきました。
+
+裏の目的については、次の本に詳しく示されています。
+
+<Amazon productKey="なぜ人と組織は変われないのか" />
+
