--- a/docs/cognitive-distortion.mdx
+++ b/docs/cognitive-distortion.mdx
@@ -3,7 +3,7 @@ title: "なんで意見が食い違うの？あなたの思い込みが論理的
 description: 論理的思考をしてもなぜ争うのか、認知の歪みの観点から説明していきます。
 created: 1532271600000
 tags: [感情, 認知の歪み, 論理的思考]
-thumbnail: https://storage.googleapis.com/stacky-health/2018/08/979397f17a4bf30c7a79cd172b832341.jpg
+thumbnail: https://untraten.sirv.com/thumbnails/cognitive-distortion.jpg
 ---
 
 # 論理的思考をしてもなぜ争うのか
