--- a/docs/cost-reduction.mdx
+++ b/docs/cost-reduction.mdx
@@ -3,7 +3,7 @@ title: ２ヶ月でチームの運用コストを半分以下にした方法
 description: 定常作業のコスト削減をして、２ヶ月でチームの運用コストを半分以下にした方法を解説します。
 created: 1531753200000
 tags: [マネジメント]
-thumbnail: https://storage.googleapis.com/stacky-health/2018/08/6a4703f14b9a41407b2e53b974355edc.jpg
+thumbnail: https://untraten.sirv.com/thumbnails/cost-redution.jpg
 ---
 
 前職ではソーシャルゲームの運用移管をやっていたドラレプです！
