--- a/docs/cui-gui.mdx
+++ b/docs/cui-gui.mdx
@@ -3,7 +3,7 @@ title: "CUIとGUIとは？噛み砕いて解説します！【初心者向け】
 description: GUIとCUIの違いから、CUIを使う理由や使うべき場所について説明していきます。
 created: 1559919600000
 tags: [CUI, GUI]
-thumbnail: https://storage.googleapis.com/stacky-health/2018/11/fce5a4f6eccec22a1236f1b4a6f55eb8.png
+thumbnail: https://untraten.sirv.com/thumbnails/cui-gui.png
 ---
 
 副業でエンジニアリングのメンターをやっていた@dorarepです！
