--- a/docs/fixed-role.mdx
+++ b/docs/fixed-role.mdx
@@ -3,7 +3,7 @@ title: 役割の固定化が生む組織の問題と改善策
 description: 担当や役割を決め、その線引き以上には踏み入らないような文化で起こる問題点と、改善案について考察していきます。
 created: 1546354800000
 tags: [組織, マネジメント]
-thumbnail: https://storage.googleapis.com/stacky-health/2019/02/cdfb3649062bee3054b23e1b5ad39058.png
+thumbnail: https://untraten.sirv.com/thumbnails/fixed-role.png
 ---
 
 フリーランスで活動していると、色々な組織を目にします。
