--- a/docs/javascript-history.mdx
+++ b/docs/javascript-history.mdx
@@ -3,7 +3,7 @@ title: "【JavaScript】Web技術の歴史【ブラウザ】"
 description: Webブラウザの誕生から、特にJavaScript周辺技術がなぜ起こったかについて詳しく説明していきます。
 created: 1576972800000
 tags: [フロントエンド, Node.js, TypeScript, JavaScript]
-thumbnail: https://storage.googleapis.com/stacky-health/2019/12/72a00cd568035ab1be8943367978e58c.png
+thumbnail: https://untraten.sirv.com/thumbnails/javascript-history.png
 ---
 
 # 1990年代前半
