--- a/docs/kernel.mdx
+++ b/docs/kernel.mdx
@@ -3,7 +3,7 @@ title: "カーネルとは？その目的と機能のまとめ【UNIX系】"
 description: MacやWindowsといった、OSの中核をなすプログラムにあたるカーネルについて詳しく説明してきます。
 created: 1559919600000
 tags: [インフラ, カーネル, UNIX]
-thumbnail: https://storage.googleapis.com/stacky-health/2019/06/e279a3140e6c6beaf76901f247b84473.png
+thumbnail: https://untraten.sirv.com/thumbnails/kernel.png
 ---
 
 # カーネルとは
