--- a/docs/motivate.mdx
+++ b/docs/motivate.mdx
@@ -3,7 +3,7 @@ title: "MVP制度は悪影響？モチベーションを最大化する競争の
 description: 競争が社員のモチベーションに悪影響を与えていることがあります。競争とモチベーションの関係性と、そこから見る最適な競争の作り方について記載していきます。
 created: 1531666800000
 tags: [モチベーション, MVP, 競争, 評価, 組織]
-thumbnail: https://storage.googleapis.com/stacky-health/2018/08/f895ba0c7dcce88dd4b8625ed2544148.jpg
+thumbnail: https://untraten.sirv.com/thumbnails/motivate.jpg
 ---
 
 社員のモチベーションをあげるために競争させることってよくありますよね。
