--- a/docs/node-js.mdx
+++ b/docs/node-js.mdx
@@ -3,7 +3,7 @@ title: "Node.jsの構造や仕組みは？【普及した理由】"
 description: Node.jsは、GoogleがChromeのために開発したV8エンジンを利用したJavaScriptの実行環境です。V8エンジンはいきなりJavaScriptを直接マシン語にコンパイルし、プログラムを実行することで、高速な実行を可能にしました。
 created: 1577059200000
 tags: [フロントエンド, バックエンド, Node.js, JavaScript]
-thumbnail: https://storage.googleapis.com/stacky-health/2019/12/nodejs.png
+thumbnail: https://untraten.sirv.com/thumbnails/node-js.png
 ---
 
 # Node.jsの構造・仕組み
