--- a/docs/okr.mdx
+++ b/docs/okr.mdx
@@ -3,7 +3,7 @@ title: "OKRがうまくいかない？運用方法とアンチパターンを解
 description: OKRは、目標の設定・管理システムの１つです。この記事ではOKRのコンセプトを見つめ直し、それを踏まえアンチパターンとその対処法をまとめていきます。
 created: 1577232000000
 tags: [組織, OKR, 目標設定, 評価]
-thumbnail: https://storage.googleapis.com/stacky-health/2019/12/okr.png
+thumbnail: https://untraten.sirv.com/thumbnails/okr.png
 ---
 
 OKRは、目標の設定・管理システムの１つです。
