--- a/docs/programmer-to-ai.mdx
+++ b/docs/programmer-to-ai.mdx
@@ -3,7 +3,7 @@ title: AIでプログラマーの仕事がなくなるという嘘
 description: AIに仕事が取られるなんて話が言われる中で、仕事を取られる筆頭としてあげられるのがプログラマーです。ITエンジニアの立場からこの説を否定します。
 created: 1534032000000
 tags: [AI, エンジニア]
-thumbnail: https://storage.googleapis.com/stacky-health/2018/08/97c87e75597ae126e45141de6f7aa33c.jpg
+thumbnail: https://untraten.sirv.com/thumbnails/programmer-ai.jpg
 ---
 
 AIに仕事が取られるーなんて話が言われる中で、仕事を取られる筆頭としてあげられるのがプログラマーです。
