--- a/docs/rails-dependent.mdx
+++ b/docs/rails-dependent.mdx
@@ -3,7 +3,7 @@ title: "【Rails】ActiveRecordの:dependent使い分けまとめ【:destroy, :d
 description: 身体を動かすために使われるエネルギーをATPと言います。この記事では、現代人が失いがちなATPの補充方法について説明します。
 created: 1534464000000
 tags: [バックエンド, Rails, Ruby, ActiveRecord]
-thumbnail: https://storage.googleapis.com/stacky-health/2018/08/RubyOnRailsDependent.jpg
+thumbnail: https://untraten.sirv.com/thumbnails/rails-dependent.jpg
 ---
 
 # ActiveRecordのdependentオプションとは
