--- a/docs/remote-work.mdx
+++ b/docs/remote-work.mdx
@@ -3,7 +3,7 @@ title: "リモートワークはつらいので辞めました！【半年やっ
 description: リモートワークを半年間やってきて、なにが辛かったか、私が抱いた印象を振り返っていきます。
 created: 1546095600000
 tags: [リモートワーク, モチベーション]
-thumbnail: https://storage.googleapis.com/stacky-health/2019/01/ab09d74b05db94c9df011e75a5457c45.png
+thumbnail: https://untraten.sirv.com/thumbnails/remote-work.png
 ---
 
 フリーランスエンジニアを初めて半年、眼精疲労から始めたリモートワーク生活を辞め、定時出社生活に戻りました！
