--- a/docs/strength-finder.mdx
+++ b/docs/strength-finder.mdx
@@ -3,7 +3,7 @@ title: 仕事で成功するための自分の強みの生かし方
 description: この記事では自分の強みを活かす方法についてまとめていきます。
 created: 1530630000000
 tags: [キャリアパス]
-thumbnail: https://storage.googleapis.com/stacky-health/2018/09/d18a08f7b14335f2bc452c1e595f76d5.jpg
+thumbnail: https://untraten.sirv.com/thumbnails/strength-finder.jpg
 ---
 
 そもそも強みを生かすことの意義はどこにあるんでしょうか。
