--- a/docs/todai-game.mdx
+++ b/docs/todai-game.mdx
@@ -3,7 +3,7 @@ title: 論理的なゲーム作りをするとどうなるのか
 description: 論理的に作られたゲームってどんなものなのかを、お伝えします。
 created: 1532876400000
 tags: [論理的思考, ゲーム]
-thumbnail: https://storage.googleapis.com/stacky-health/2018/08/86cf422fcc88f8754cb2b9de5e3b2a92.jpg
+thumbnail: https://untraten.sirv.com/thumbnails/todai-game.jpg
 ---
 
 任天堂に対して、「東大生をたくさんとって面白いゲームが作れるのか！」なんて批判、ネット上で良く目にしますよね。
