--- a/docs/engineer-interview.mdx
+++ b/docs/engineer-interview.mdx
@@ -3,7 +3,7 @@ title: "良いエンジニアを採用するための面接のやり方"
 description: 良いエンジニアを採用するための面接やり方について、体系的にまとめていきます。
 created: 1533222000000
 tags: [面接, 採用]
-thumbnail: https://storage.googleapis.com/stacky-health/2018/08/ac38ed05cc88df6cd0b7b3e45eb0828c.jpg
+thumbnail: https://untraten.sirv.com/thumbnails/engineer-interview.jpg
 ---
 # 面接前に：良いエンジニアを定義する
 まず良いエンジニアって何なのでしょうか。
