--- a/docs/identity.mdx
+++ b/docs/identity.mdx
@@ -3,7 +3,7 @@ title: "行動を促すためのアイデンティティを活かした組織の
 description: アイデンティティをうまく扱うことで、チームメンバーにしてほしい行動を促すこともできるようになります。人々の行動を左右するアイデンティティと、それを活かしたチームづくりについて書いていきます。
 created: 1531666800000
 tags: [アイデンティティ, 組織]
-thumbnail: https://storage.googleapis.com/stacky-health/2018/08/5ac31205f5096f37c8429cab318c93e3.jpg
+thumbnail: https://untraten.sirv.com/thumbnails/identity.jpg
 ---
 
 なかなか思い通りにチームメンバーが動いてくれない！なんてこと良くありますよね。
