--- a/docs/ddd.mdx
+++ b/docs/ddd.mdx
@@ -2,7 +2,7 @@
 title: DDDは結局、なにを実現したいのか
 description: 最近は「文系エンジニアが◯◯」などの記事がよく注目を集めます。プログラミングにおける文系と理系の差を考えてみたいと思います。
 created: 1568073600000
-tags: [DDD, 設計]
+tags: [DDD, 設計, バックエンド]
 thumbnail: https://untraten.sirv.com/thumbnails/ddd.png
 ---
 
