--- a/docs/microservices.mdx
+++ b/docs/microservices.mdx
@@ -2,7 +2,7 @@
 title: そのマイクロサービスは正解なのか？
 description: どのようなときにマイクロサービス化を進めれば良いのか、判断基準をまとめていきます。
 created: 1615624527087
-tags: [設計, インフラ]
+tags: [設計, インフラ, バックエンド]
 thumbnail: https://untraten.sirv.com/thumbnails/microservices.png
 ---
 
@@ -92,7 +92,7 @@ Auth0などの外部サービスを利用するかのも含めて、少なくと
 
 これはサービスレベルで書き直しが効きやすくなるということです。
 本書には『数百行レベル』という例示もあり、FaaSレベルに独立できる機能であれば確かに気軽に切り離すのは賛成です。
-たとえば過去に『(Lambdaで最寄駅検索APIを作ってみた)[https://qiita.com/dorarep/items/af8c168a24a3ba2c468a]』という記事も書きましたが、まさにこれは良いマイクロサービス化だと思っています。
+たとえば過去に『[Lambdaで最寄駅検索APIを作ってみた](https://qiita.com/dorarep/items/af8c168a24a3ba2c468a)』という記事も書きましたが、まさにこれは良いマイクロサービス化だと思っています。
 
 一方で、現実問題は何千行・何万行もあるマイクロサービスがほとんどです。
 そうなると、実質モノリシックなサービスと書き直しのしやすさはそうそう変わりません。
