feat: add article

--- a/docs/ddd.mdx
+++ b/docs/ddd.mdx
@@ -1,6 +1,6 @@
 ---
 title: DDDは結局、なにを実現したいのか
-description: 最近は「文系エンジニアが◯◯」などの記事がよく注目を集めます。プログラミングにおける文系と理系の差を考えてみたいと思います。
+description: そもそもDDDは何を実現したいのかという点からまとめていきます。
 created: 1568073600000
 tags: [DDD, 設計, バックエンド]
 thumbnail: https://untraten.sirv.com/thumbnails/ddd.png
@@ -12,7 +12,7 @@ Entityだの、Layered Architectureだの、依存関係逆転の法則だの、
 
 しかしそれは、DDDを実現するための手段でしかありません。
 手段が目的化すると、ドメインモデル貧血症のように記述量が増えたわりに結局何も実現できてなかったということになりがちです。
-ですので、この記事ではそもそもDDDは何を実現したいのかという点からまとめていきたいと思います！
+ですので、この記事ではそもそもDDDは何を実現したいのかという点からまとめていきます！
 
 # DDDは何をしたいか
 DDDはそもそも、何を実現したいんでしょうか。
