feat: add article

--- a/docs/coding-standard.mdx
+++ b/docs/coding-standard.mdx
@@ -84,17 +84,17 @@ IT業界において、機能をいかに素早くリリースするかは非常
 
 しかし将来的にそれが理由でリリースを数週間遅らせるとしてもペイできるのか考えると、本当に必要なルールはそこまでないようにも感じます。
 
-## 「書き方を揃える」の暴力性
+## 「書き方を揃えろ」の暴力性
 
 「他がこう書いてあるから揃えろ」はそれこそどんな状況下でも使える言葉です。
 
-伝聞ですが、書き方が揃ってないと以下のコードが指摘されたようです。
+たとえば「書き方が揃ってない！」と以下のようなレビューがされたという投稿を見たことがあります。
 
 ```ts
 const hasCompany = !!context?.user?.company
 ```
 
-他が`if`で存在確認をしているため、次のように書くように指摘されたそうです。
+他が`if`で、`?.`を使わず存在確認をしているため、次のように修正しろとのことです。
 
 ```ts
 let hasCompany: boolean;
@@ -105,6 +105,14 @@ if (context && context.user && context.user.company) {
     hasCompany = false;
 }
 ```
+
+この修正の必要性は、疑う人も多いのではないでしょうか。
+
+もし本当にその書き方の方が優れているのであれば、その理由を説明すれば相手も納得した上で修正してくれるはずです。
+
+一方で「書き方を揃える」が理由なのであれば、逆にいえば「それ以上の理由が説明できない」と言っているのようなものです。
+
+## 「揃ってないと気持ち悪い」
 
 もちろんこの事例は極端かもしれませんが、『書き方を揃える』は大なり小なり『自分の見慣れた書き方に揃えたい』という欲求ドリブンであるように感じます。
 
